--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -477,58 +477,78 @@ x_order <-
   mutate(
     total = nrow(proofed_data),
     proportion = count_errors / nrow(proofed_data)) %>%
-  arrange(proportion)
+  arrange(proportion) %>% 
+  select(errors) %>% 
+  mutate(order = row_number())
+
+table_1 <-
+  final_data %>%
+  mutate(
+    birth_year = str_extract(birth_date, "(?<=\\/)[0-9]{4}$"),
+    special =
+      ifelse(
+        birth_year > params$year - 16,
+        "Youth Hunter",
+        NA)) %>%
+  select(errors, special) %>%
+  # Pull errors apart, delimited by hyphens
+  separate(errors, into = as.character(c(1:25)), sep = "-") %>%
+  # Transform errors into a single column
+  pivot_longer(1:25, names_to = "name") %>%
+  select(errors = value, special) %>%
+  filter(!is.na(errors))
+
+# Step 2: table of errors with proportions calculated -- the youth
+# errors must be row bound in
+table_2 <-
+  table_1 %>%
+  group_by(errors) %>%
+  # Count number of correct and incorrect values
+  summarize(count_errors = sum(!is.na(errors))) %>%
+  ungroup() %>%
+  filter(errors != "birth_date") %>%
+  bind_rows(
+    table_1 %>%
+      group_by(errors, special) %>%
+      summarize(count_errors = sum(!is.na(errors))) %>%
+      ungroup() %>%
+      filter(errors == "birth_date")) %>%
+  # Calculate error proportion
+  mutate(
+    total = nrow(final_data),
+    proportion = count_errors / nrow(final_data))
 
 # Labels for bar plot (birth_date color stack doesn't cooperate with
 # positioning 2 labels, so we only label that field once at the top of
 # the bar)
 barlabels <-
-  x_order %>%
-  select(-total) %>% 
-  bind_rows(
-    x_order %>%
-      select(-total) %>% 
-      filter(errors == "birth_date"))
-
-left_join(
-  x_order %>% 
-    mutate(order = row_number()) %>% 
-    select(errors, order), 
-  final_data %>%
-    mutate(
-      birth_year = str_extract(birth_date, "(?<=\\/)[0-9]{4}$"),
-      special =
-        ifelse(
-          birth_year > params$year - 16,
-          "Youth Hunter",
-          NA)) %>%
-    select(errors, special) %>%
-    # Pull errors apart, delimited by hyphens
-    separate(errors, into = as.character(c(1:25)), sep = "-") %>%
-    # Transform errors into a single column
-    pivot_longer(1:25, names_to = "name") %>%
-    select(errors = value, special) %>%
-    filter(!is.na(errors)) %>%
-    mutate(special = ifelse(errors != "birth_date", NA, special)) %>% 
-    group_by(errors, special) %>%
-    # Count number of correct values
-    summarize(count_errors = sum(!is.na(errors))) %>%
-    ungroup(),
-  by = "errors") %>%
-  mutate(count_errors = ifelse(is.na(count_errors), 0, count_errors)) %>% 
-  # Calculate error proportion
+  table_2 %>%
+  select(-c("special", "total")) %>%
+  group_by(errors) %>%
   mutate(
-    total = nrow(final_data),
-    proportion = count_errors / nrow(final_data)) %>%
-  # Plot
+    count_errors = sum(count_errors),
+    proportion = sum(proportion)) %>%
+  ungroup()
+
+# Plot
+x_order %>%
+  left_join(table_2, by = "errors") %>% 
+  mutate(
+    proportion = ifelse(is.na(proportion), 0, proportion),
+    total = ifelse(is.na(total), 0, total)) %>%
+  group_by(errors) %>% 
+  mutate(
+    count_errors = sum(count_errors),
+    cumulative_prop = sum(proportion)) %>% 
+  ungroup() %>% 
   ggplot() +
   geom_bar(
-    aes(x = reorder(errors, proportion), y = proportion, fill = special),
+    aes(x = reorder(errors, order), y = proportion, fill = special),
     stat = "identity") +
   geom_text(
-    aes(x = barlabels$errors,
-        y = barlabels$proportion,
-        label = barlabels$count_errors,
+    aes(x = errors,
+        y = cumulative_prop,
+        label = count_errors,
         angle = 90),
     vjust = 0.2, hjust = -0.2) +
   labs(
@@ -541,63 +561,10 @@ left_join(
   theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1)) +
   scale_fill_discrete(labels = "Youth Hunter", breaks = "Youth Hunter")
 
-# # Get the order of the fields so that they match the plot above
-# x_order <-
-#   proofed_data %>%
-#   select(errors) %>%
-#   # Pull errors apart, delimited by hyphens
-#   separate(errors, into = as.character(c(1:25)), sep = "-") %>%
-#   # Transform errors into a single column
-#   pivot_longer(1:25, names_to = "name") %>%
-#   select(errors = value) %>%
-#   filter(!is.na(errors)) %>%
-#   group_by(errors) %>%
-#   # Count number of correct values
-#   summarize(count_errors = sum(!is.na(errors))) %>%
-#   ungroup() %>%
-#   # Calculate error proportion
-#   mutate(
-#     total = nrow(proofed_data),
-#     proportion = count_errors / nrow(proofed_data)) %>%
-#   arrange(proportion)
-# 
-# left_join(
-#   x_order %>% 
-#     mutate(order = row_number()) %>% 
-#     select(errors, order), 
-#   final_data %>%
-#     select(errors) %>%
-#     # Pull errors apart, delimited by hyphens
-#     separate(errors, into = as.character(c(1:25)), sep = "-") %>%
-#     # Transform errors into a single column
-#     pivot_longer(1:25, names_to = "name") %>%
-#     select(errors = value) %>%
-#     filter(!is.na(errors)) %>%
-#     group_by(errors) %>%
-#     # Count number of correct values
-#     summarize(count_errors = sum(!is.na(errors))) %>%
-#     ungroup(),
-#   by = "errors") %>%
-#   mutate(count_errors = ifelse(is.na(count_errors), 0, count_errors)) %>% 
-#   # Calculate error proportion
-#   mutate(
-#     total = nrow(final_data),
-#     proportion = count_errors / nrow(final_data)) %>%
-#   # Plot
-#   ggplot() +
-#   geom_bar(
-#     aes(x = reorder(errors, order), y = proportion),
-#     stat = "identity") +
-#   geom_text(
-#     aes(x = errors, y = proportion, label = count_errors, angle = 90),
-#     vjust = 0.2, hjust = -0.2) +
-#   labs(
-#     x = "Field",
-#     y = "Error proportion",
-#     title = "Error proportion per field") +
-#   scale_y_continuous(expand = expansion(mult = c(-0, 0.25))) +
-#   theme_classic() +
-#   theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
+rm(x_order) 
+rm(table_1)
+rm(table_2)
+rm(barlabels)
 
 ```
 
