--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -364,7 +364,7 @@ validate(DL1301_fixed, type = "horizontal")
 ##  3 MO20211229.txt 1        2697    3604       0.748
 ##  4 ME20211229.txt 1         112     151       0.742
 ##  5 NM20211229.txt 1         208     295       0.705
-##  6 ID20211229.txt 1        1762    2588       0.681
+##  6 ID20211229.txt 1        1761    2588       0.680
 ##  7 ND20211215.txt 1         130     204       0.637
 ##  8 CA20211229.txt 1        2003    3211       0.624
 ##  9 IN20211229.txt 1         416     690       0.603
@@ -574,7 +574,10 @@ memory.limit(size = 55000)
 writeReport(
   path = "C:/HIP/DL1301",
   type = "dl_report",
+  corrected_path = "C:/HIP/corrected_data",
+  future_path = "C:/HIP/future_data",
   yr = 2019,
+  dl = "1301",
   dir = "C:/HIP/dl_reports",
   file = "DL1301_report")
 ```
