--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -277,12 +277,12 @@ Records below have an issue_date after the end of migratory bird hunting for tha
 
 ```{r reg_yr_check3, echo = FALSE}
 
-if(!str_detect(params$future_path, "\\/$")){
+if(str_detect(params$future_path, "\\/$") == FALSE){
   params$future_path <- paste0(params$future_path, "/")}
 
 future_file <- paste0("DL", params$dl, "_future_data.csv")
 
-if(future_file %in% list.files(params$future_path)){
+if(future_file %in% list.files(params$future_path) == TRUE){
   future_data <-
     read_csv(paste0(params$future_path, future_file))
   
