--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -114,23 +114,22 @@ final_data <-
       select(1:27) %>% 
       rename(
         zip = postal_code,
-        ducks_bag = Q_ducks,
-        geese_bag = Q_geese,
-        dove_bag = Q_doves,
-        woodcock_bag = Q_woodcock,
-        coots_snipe = Q_coot_snipe,
-        rails_gallinules = Q_rail_gallinule,
-        cranes = Q_cranes,
-        band_tailed_pigeon = Q_bt_pigeons,
-        brant = Q_brant,
-        seaducks = Q_seaducks)) %>% 
+        ducks_bag = S_ducks,
+        geese_bag = S_geese,
+        dove_bag = S_doves,
+        woodcock_bag = S_woodcock,
+        coots_snipe = S_coot_snipe,
+        rails_gallinules = S_rail_gallinule,
+        cranes = S_cranes,
+        band_tailed_pigeon = S_bt_pigeons,
+        brant = S_brant,
+        seaducks = S_seaducks,
+        dl_cycle = dl)) %>% 
   proof(., year = params$year) %>% 
   mutate(
     # Add the download date as a column
     dl_date =
-      str_extract(source_file, "(?<=[A-Z]{2})[0-9]{8}(?=\\.txt)"),
-    # Add the download cycle as a column
-    dl_cycle = params$dl)
+      str_extract(source_file, "(?<=[A-Z]{2})[0-9]{8}(?=\\.txt)"))
 
 # Summarize number of records from Canada
 canada_records <-
