--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -302,8 +302,8 @@ Records are kept when they meet the below criteria (in order of importance):
 
 1. The record in the group has the most recent issue date.
 2. Records do not contain all 1s or all 0s in bag columns.
-3. For duplicates from sea duck states (AK, CA, CT, DE, MA, MD, ME, NC, NH, NJ, NY, RI, VA), keep records with a 2 in seaduck.
-4.  For duplicates from brant states (AK, CA, CT, DE, MA, MD, NH, NJ, NY, NC, RI, VA), keep records with a 2 in brant.
+3. For duplicates from sea duck and brant states (AK, CA, CT, DE, MA, MD, NC, NH, NJ, NY, RI, VA), keep records with a 2 in seaduck or brant.
+4.  For duplicates from seaduck-only state (ME), keep records with a 2 in seaduck.
 4. If records are tied, one is chosen randomly.
 
 A new field called "record_type" is added to the data after the above deduplicating process. Every HIP record is labeled "HIP". Permit states WA, OR, CO, and SD send HIP and permit records separately, which are labeled "HIP" and "PMT" respectively.
@@ -328,20 +328,20 @@ strataCheck(DL1301_fixed)
 ```
 
 ```
-## # A tibble: 214 × 4
-##    dl_state spp                state_strata normal_strata
-##    <chr>    <chr>              <chr>        <chr>        
-##  1 ND       woodcock_bag       0            1, 2, 3, 5   
-##  2 OR       dove_bag           0            1, 2, 3, 5   
-##  3 ME       dove_bag           0            1, 2, 3, 4   
-##  4 OR       ducks_bag          0            1, 2, 3, 4   
-##  5 OR       geese_bag          0            1, 2, 3, 4   
-##  6 OK       cranes             0            1, 2         
-##  7 OR       band_tailed_pigeon 0            1, 2         
-##  8 OR       brant              0            1, 2         
-##  9 OR       seaducks           0            1, 2         
-## 10 CO       seaducks           0            1            
-## # … with 204 more rows
+## # A tibble: 37 × 4
+##    dl_state spp          state_strata normal_strata
+##    <chr>    <chr>        <chr>        <chr>        
+##  1 FL       dove_bag     0            1, 2, 3, 5   
+##  2 IA       dove_bag     0            1, 2, 3, 5   
+##  3 OR       dove_bag     0            1, 2, 3, 5   
+##  4 TN       dove_bag     0            1, 2, 3, 5   
+##  5 TN       woodcock_bag 0            1, 2, 3, 5   
+##  6 IA       ducks_bag    0            1, 2, 3, 4   
+##  7 IA       geese_bag    0            1, 2, 3, 4   
+##  8 OR       ducks_bag    0            1, 2, 3, 4   
+##  9 OR       geese_bag    0            1, 2, 3, 4   
+## 10 TN       ducks_bag    0            1, 2, 3, 4   
+## # … with 27 more rows
 ```
 
 ### validate
@@ -364,7 +364,7 @@ validate(DL1301_fixed, type = "horizontal")
 ##  3 MO20211229.txt 1        2697    3604       0.748
 ##  4 ME20211229.txt 1         112     151       0.742
 ##  5 NM20211229.txt 1         208     295       0.705
-##  6 ID20211229.txt 1        1761    2588       0.680
+##  6 ID20211229.txt 1        1762    2588       0.681
 ##  7 ND20211215.txt 1         130     204       0.637
 ##  8 CA20211229.txt 1        2003    3211       0.624
 ##  9 IN20211229.txt 1         416     690       0.603
