--- a/vignettes/migbirdHIP_workflow.Rmd
+++ b/vignettes/migbirdHIP_workflow.Rmd
@@ -222,14 +222,13 @@ Other quick fixes include:
 
 ### issueCheck
 
-Sometimes we receive HIP records that should be processed in a future season. We also sometiems receive records that should be processed in both this season and a future one, since some states have license years that encompass two seasons. The `issueCheck` function evaluates issue_date and registration_yr for two-season states (ME, MA, ID, CT, WV, VT, NH, IA, ND, SD, and TN) as well as a 365-day state (MS). It also sets aside records from any state that have future registration_yr value.
-
-Note: Records "set aside" will be filtered out of the current data and written to a future data .csv file to be accessed in the next HIP season.
+Sometimes we receive HIP records that should be processed in a future season. We also sometiems receive records that should be processed in both this season and a future one, since some states have license years that encompass two seasons. The `issueCheck` function evaluates issue_date and registration_yr for two-season states (ME, MA, ID, CT, WV, VT, NH, IA, ND, SD, and TN) as well as a 365-day state (MS). It sets aside future records and past records in separate .csv files to be evaluated later. Only the current registrations are returned.
 
 For ME, MA, ID, CT, WV, VT, NH, IA, ND, SD, and TN:
 
 * If a record's issue_date is between issue_start and last day of hunting season, AND registration_yr is for next season, (1) COPY the record for next year and (2) CHANGE registration_yr for this year (subtract 1) so it's includable in the sample.
 * If a record's issue_date is after the end of hunting season, SET IT ASIDE for next year.
+* If a record's registration_yr is yr-1, SET IT ASIDE as past data.
 
 For MS:
 
@@ -242,22 +241,43 @@ For all states:
 
 
 ```r
-DL1301_current <- issueCheck(DL1301_clean, year = 2021, write = F)
+DL1301_current <- issueCheck(DL1301_clean, year = 2021, plot = F, write = F)
 ```
 
 ```
-## 709 records have been modified to have registration_yr - 1. They have been copied and saved for next season in the future data .csv with their original registration_yr.
+## * 709 records have been modified to have registration_yr - 1. They have been copied and saved for next season in the future data .csv with their original registration_yr.
 ```
 
 ```
-## 6615 records have been postponed for next year. They will be filtered out from this download and saved in the future data .csv with their original registration_yr.
+## * No records need to be postponed for next year.
 ```
 
-To export a table of records to process in a future season, specify the outpath where the .csv should be written and specify `write = TRUE`.
+```
+## * No past records detected.
+```
+
+```
+## # A tibble: 4 × 4
+##   reg_yr_eval issue_eval       decision sum_n
+##   <chr>       <chr>            <chr>    <int>
+## 1 copy        two season state copy       709
+## 2 nochange    past             bad      33225
+## 3 nochange    two season state nochange  8452
+## 4 postpone    past             bad       6615
+```
+
+To export a table of records to process in a future season and to set aside records from past seasons to include in the download report, specify the outpaths where the .csv files should be written and specify `write = TRUE`.
 
 
 ```r
-DL1301_current <- issueCheck(DL1301_clean, year = 2021, path = "C:/HIP/future_data/", write = T)
+DL1301_current <- issueCheck(DL1301_clean, year = 2021, future_outpath = "C:/HIP/future_data/", past_outpath = "C:/HIP/past_data/", plot = F, write = T)
+```
+
+To print a plot of bad records in which the registration_yr and issue_date do not agree, use `plot = T`.
+
+
+```r
+DL1301_current <- issueCheck(DL1301_clean, year = 2021, plot = T, write = F)
 ```
 
 ### findDuplicates
@@ -277,21 +297,24 @@ findDuplicates(DL1301_current, return = "table")
 ```
 
 ```
-## # A tibble: 12 × 2
+## # A tibble: 15 × 2
 ##    dupl                                         count
 ##    <chr>                                        <int>
-##  1 address                                          1
-##  2 address-email                                    1
-##  3 address-zip-email                                1
-##  4 address-zip-issue_date                           1
-##  5 bag                                            483
-##  6 email                                            1
-##  7 hunt_mig_birds                                   1
-##  8 issue_date                                      13
-##  9 issue_date-dl_date                               1
-## 10 issue_date-email                                 1
-## 11 issue_date-hunt_mig_birds-dl_date                3
-## 12 middle-address-city-zip-hunt_mig_birds-email     1
+##  1 address                                          2
+##  2 address-city                                     1
+##  3 address-email                                    2
+##  4 address-zip-email                                1
+##  5 address-zip-issue_date                           1
+##  6 bag                                            485
+##  7 email                                            2
+##  8 hunt_mig_birds                                   1
+##  9 issue_date                                      25
+## 10 issue_date-dl_date                               1
+## 11 issue_date-email                                 1
+## 12 issue_date-hunt_mig_birds-dl_date                3
+## 13 middle                                           5
+## 14 middle-address-city-zip-hunt_mig_birds-email     1
+## 15 suffix-issue_date-email                          1
 ```
 
 ### fixDuplicates
@@ -328,20 +351,20 @@ strataCheck(DL1301_fixed)
 ```
 
 ```
-## # A tibble: 37 × 4
+## # A tibble: 38 × 4
 ##    dl_state spp          state_strata normal_strata
 ##    <chr>    <chr>        <chr>        <chr>        
-##  1 FL       dove_bag     0            1, 2, 3, 5   
-##  2 IA       dove_bag     0            1, 2, 3, 5   
-##  3 OR       dove_bag     0            1, 2, 3, 5   
-##  4 TN       dove_bag     0            1, 2, 3, 5   
-##  5 TN       woodcock_bag 0            1, 2, 3, 5   
-##  6 IA       ducks_bag    0            1, 2, 3, 4   
-##  7 IA       geese_bag    0            1, 2, 3, 4   
-##  8 OR       ducks_bag    0            1, 2, 3, 4   
-##  9 OR       geese_bag    0            1, 2, 3, 4   
-## 10 TN       ducks_bag    0            1, 2, 3, 4   
-## # … with 27 more rows
+##  1 AL       woodcock_bag 3            1, 2, 4, 5   
+##  2 FL       dove_bag     0            1, 2, 3, 5   
+##  3 IA       dove_bag     0            1, 2, 3, 5   
+##  4 OR       dove_bag     0            1, 2, 3, 5   
+##  5 TN       dove_bag     0            1, 2, 3, 5   
+##  6 TN       woodcock_bag 0            1, 2, 3, 5   
+##  7 IA       ducks_bag    0            1, 2, 3, 4   
+##  8 IA       geese_bag    0            1, 2, 3, 4   
+##  9 OR       ducks_bag    0            1, 2, 3, 4   
+## 10 OR       geese_bag    0            1, 2, 3, 4   
+## # … with 28 more rows
 ```
 
 ### validate
@@ -356,20 +379,20 @@ validate(DL1301_fixed, type = "horizontal")
 ```
 
 ```
-## # A tibble: 43 × 5
+## # A tibble: 49 × 5
 ##    source_file    h_value h_rep h_total prop_repeat
 ##    <chr>          <chr>   <int>   <int>       <dbl>
 ##  1 IA20211215.txt 0        2841    3175       0.895
-##  2 WI20211229.txt 1         273     323       0.845
-##  3 MO20211229.txt 1        2697    3604       0.748
-##  4 ME20211229.txt 1         112     151       0.742
-##  5 NM20211229.txt 1         208     295       0.705
-##  6 ID20211229.txt 1        1762    2588       0.681
-##  7 ND20211215.txt 1         130     204       0.637
-##  8 CA20211229.txt 1        2003    3211       0.624
-##  9 IN20211229.txt 1         416     690       0.603
-## 10 GA20211229.txt 1        2199    3821       0.576
-## # … with 33 more rows
+##  2 AL20211229.txt 1        4223    4790       0.882
+##  3 WI20211229.txt 1         273     323       0.845
+##  4 MO20211229.txt 1        2697    3604       0.748
+##  5 ME20211229.txt 1         112     151       0.742
+##  6 NM20211229.txt 1         208     295       0.705
+##  7 ID20211229.txt 1        1762    2588       0.681
+##  8 ND20211215.txt 1         130     204       0.637
+##  9 CA20211229.txt 1        2003    3211       0.624
+## 10 IN20211229.txt 1         416     690       0.603
+## # … with 39 more rows
 ```
 
 <b>Vertically.</b> The vertical check searches within each column for repetition. Any species group column with the same value in all rows will be detected. The default version of this function (`all = FALSE`) only checks duck bags. If the parameter is set to `all = TRUE`, every species group will be checked.
@@ -440,6 +463,15 @@ After data are cleaned and checked for any important issues that would require m
 DL1301_proofed <- proof(DL1301_fixed, year = 2021)
 ```
 
+```
+## # A tibble: 3 × 3
+##   source_file        n  prop
+##   <chr>          <int> <dbl>
+## 1 AL20211229.txt  4790     1
+## 2 LA20211217.txt   608     1
+## 3 LA20211220.txt  1192     1
+```
+
 Data that are considered irregular are flagged in a new column called "errors". No actual corrections take place in this step; all data remain identical except for the new "errors" column. For each field, values are compared to standard expected formats and if they do not conform, the field name is pasted as a string in the "errors" column. Each row can have from zero errors (NA) to all column names listed. Multiple flags are hyphen delimited.
 
 The year of the Harvest Information Program must be supplied as a parameter. This aids in checking dates when licenses were issued, as one example.
@@ -454,24 +486,26 @@ DL1301_corrected <- correct(DL1301_proofed, year = 2021)
 ```
 
 ```
-## Warning: Zip codes detected that do not correspond to provided state of residence.
-```
-
-```
-## # A tibble: 112 × 4
-##    record_key   zip        state zipState
-##    <chr>        <chr>      <chr> <chr>   
-##  1 record_8188  20589      CO    DC      
-##  2 record_9556  32578-2725 OH    FL      
-##  3 record_10308 32428-6908 VA    FL      
-##  4 record_12168 85034      GA    AZ      
-##  5 record_14484 32435-6458 GA    FL      
-##  6 record_16247 2034       GA    DC      
-##  7 record_16261 2034       GA    DC      
-##  8 record_18352 35213-3909 GA    AL      
-##  9 record_18432 30161-4073 WY    GA      
-## 10 record_19442 98409      IA    WA      
-## # … with 102 more rows
+## # A tibble: 3 × 3
+##   source_file        n  prop
+##   <chr>          <int> <dbl>
+## 1 AL20211229.txt  4790     1
+## 2 LA20211217.txt   608     1
+## 3 LA20211220.txt  1192     1
+## # A tibble: 129 × 4
+##    record_key  zip        state zipState
+##    <chr>       <chr>      <chr> <chr>   
+##  1 record_892  71646      AZ    AR      
+##  2 record_1214 53473      AL    WI      
+##  3 record_1334 30152-4158 AL    GA      
+##  4 record_1706 25652      AL    WV      
+##  5 record_2217 35959      GA    AL      
+##  6 record_3432 32567      AL    FL      
+##  7 record_3448 30456      AL    GA      
+##  8 record_3825 36005      FL    AL      
+##  9 record_4202 20097      NC    DC      
+## 10 record_4706 29744      NC    SC      
+## # … with 119 more rows
 ```
 
 The following changes are made by the `correct` function:
@@ -575,7 +609,7 @@ write_hip(DL1301_corrected, path = "C:/HIP/processed_data/")
 
 ### writeReport
 
-The `writeReport` function can be used to automatically generate an R markdown document with figures, tables, and summary statistics. This can be done at the end of a download cycle (using `type = "dl_report"`) or the entire HIP season (with `type = "season_report"`). You should expect this function to run for ~1 minute for a download cycle, or ~30 minutes for a total season (containing approximately 4 million records). Writing a total season report is a memory intensive process, so for this option, we recommend [increasing your memory](#memory-problems) allocated to R.
+The `writeReport` function can be used to automatically generate an R markdown document with figures, tables, and summary statistics. This can be done at the end of a download cycle (using `type = "dl_report"`) or the entire HIP season (with `type = "season_report"`).  Writing a total season report is a memory intensive process, so for this option, we recommend [increasing your memory](#memory-problems) allocated to R.
 
 
 ```r
@@ -587,6 +621,7 @@ writeReport(
   type = "dl_report",
   corrected_path = "C:/HIP/corrected_data",
   future_path = "C:/HIP/future_data",
+  past_path = "C:/HIP/past_data",
   yr = 2019,
   dl = "1301",
   dir = "C:/HIP/dl_reports",
@@ -633,11 +668,6 @@ errorPlot_fields(DL1301_proofed, loc = "all", year = 2021)
 
 ```r
 errorPlot_fields(DL1301_proofed, loc = "LA", year = 2021)
-```
-
-```
-## Error in `check_aesthetics()`:
-## ! Aesthetics must be either length 1 or the same as the data (1): x, y and label
 ```
 
 <img src="figure/errorfieldsplotsc-1.png" title="Figure 3. Plot of Louisiana's errors by field name." alt="Figure 3. Plot of Louisiana's errors by field name." width="500" style="display: block; margin: auto;" />
@@ -697,20 +727,20 @@ errorTable(DL1301_proofed)
 ```
 
 ```
-## # A tibble: 82 × 3
+## # A tibble: 92 × 3
 ##    dl_state error           error_count
 ##    <chr>    <chr>                 <dbl>
 ##  1 AK       issue_date                1
 ##  2 AK       registration_yr           1
-##  3 CA       birth_date              212
-##  4 CA       title                     2
-##  5 CO       birth_date               76
-##  6 CO       zip                       1
-##  7 CT       birth_date                8
-##  8 CT       email                   248
-##  9 CT       firstname                 1
-## 10 FL       birth_date               92
-## # … with 72 more rows
+##  3 AL       birth_date              157
+##  4 AL       email                     3
+##  5 AL       firstname                 5
+##  6 AL       registration_yr        4790
+##  7 AL       suffix                    5
+##  8 AL       zip                      10
+##  9 CA       birth_date              212
+## 10 CA       title                     2
+## # … with 82 more rows
 ```
 
 Errors can be reported by only location by turning off the `field` parameter.
@@ -721,20 +751,20 @@ errorTable(DL1301_proofed, field = "none")
 ```
 
 ```
-## # A tibble: 26 × 2
+## # A tibble: 28 × 2
 ##    dl_state error_count
 ##    <chr>          <dbl>
 ##  1 AK                 2
-##  2 CA               214
-##  3 CO                77
-##  4 CT               257
-##  5 FL               103
-##  6 GA               122
-##  7 IA               147
-##  8 ID               222
-##  9 IN                71
-## 10 KY                70
-## # … with 16 more rows
+##  2 AL              4970
+##  3 CA               214
+##  4 CO                77
+##  5 CT               257
+##  6 FL               103
+##  7 GA               122
+##  8 IA               147
+##  9 ID               222
+## 10 IN                71
+## # … with 18 more rows
 ```
 
 Errors can be reported by only field by turning off the `loc` parameter.
@@ -748,18 +778,18 @@ errorTable(DL1301_proofed, loc = "none")
 ## # A tibble: 12 × 2
 ##    error           error_count
 ##    <chr>                 <dbl>
-##  1 birth_date             2157
+##  1 birth_date             2347
 ##  2 city                      1
-##  3 email                   271
-##  4 firstname                42
+##  3 email                   274
+##  4 firstname                49
 ##  5 hunt_mig_birds           11
 ##  6 issue_date                1
 ##  7 lastname                  5
-##  8 registration_yr           1
+##  8 registration_yr        6591
 ##  9 state                     1
-## 10 suffix                   32
+## 10 suffix                   37
 ## 11 title                     3
-## 12 zip                     115
+## 12 zip                     132
 ```
 
 Location can be specified.
@@ -788,7 +818,7 @@ errorTable(DL1301_proofed, field = "suffix")
 ## # A tibble: 1 × 2
 ##   error  error_count
 ##   <chr>        <dbl>
-## 1 suffix          32
+## 1 suffix          37
 ```
 
 Total errors for a location can be pulled.
@@ -828,10 +858,12 @@ redFlags(DL1301_proofed, type = "state", threshold = 0.03)
 ```
 
 ```
-## # A tibble: 1 × 5
+## # A tibble: 3 × 5
 ##   dl_state count_errors count_correct proportion flag        
 ##   <chr>           <int>         <int>      <dbl> <chr>       
-## 1 CT                257          5943     0.0415 error > 0.03
+## 1 AL               4970        114780     0.0415 error > 0.03
+## 2 CT                257          5943     0.0415 error > 0.03
+## 3 LA               1842         43158     0.0409 error > 0.03
 ```
 
 <b>By field.</b>
@@ -843,10 +875,11 @@ redFlags(DL1301_proofed, type = "field", threshold = 0.01)
 ```
 
 ```
-## # A tibble: 1 × 5
-##   errors     count_errors count_correct proportion flag        
-##   <chr>             <int>         <int>      <dbl> <chr>       
-## 1 birth_date         2157         39706     0.0515 error > 0.01
+## # A tibble: 2 × 5
+##   errors          count_errors count_correct proportion flag        
+##   <chr>                  <int>         <int>      <dbl> <chr>       
+## 1 registration_yr         6591         41862     0.136  error > 0.01
+## 2 birth_date              2347         46106     0.0484 error > 0.01
 ```
 
 ## Troubleshooting
