dl_report template: edited typo in generating issue_assignments

--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -216,7 +216,7 @@ twoseasonstates <-
   pull()
 
 issue_assignments <-
-  data %>%
+  cleaned_data %>%
   left_join(
     licenses_ref %>%
       rename(dl_state = state),
