dl_report template: removed decision field from summary of future and past data

--- a/inst/templates/dl_report.Rmd
+++ b/inst/templates/dl_report.Rmd
@@ -339,7 +339,7 @@ if(future_file %in% list.files(future_path)){
   
   future_summary <- 
     future_data %>% 
-    group_by(dl_state, registration_yr, decision) %>% 
+    group_by(dl_state, registration_yr) %>% 
     summarize(n = n()) %>% 
     ungroup() %>% 
     arrange(desc(n))
@@ -377,7 +377,7 @@ if(past_file %in% list.files(past_path)){
   
   past_summary <- 
     past_data %>% 
-    group_by(dl_state, registration_yr, decision) %>% 
+    group_by(dl_state, registration_yr) %>% 
     summarize(n = n()) %>% 
     ungroup() %>% 
     arrange(desc(n))
